--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,13 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 colorama==0.4.6
+cron-descriptor==1.4.5
 Django==5.2.4
+django-celery-beat==2.8.1
 django-cors-headers==4.7.0
 django-environ==0.12.0
 django-filter==25.1
+django-timezone-field==7.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
 drf-nested-routers==0.94.2
@@ -24,6 +27,7 @@ mysqlclient==2.2.7
 packaging==25.0
 prompt_toolkit==3.0.51
 PyJWT==2.10.1
+python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
